--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="message">
         <img class="message-logo">
-          <a href="https://www.twitter.com/benjaminwatson/" target="_blank"><img src="icons/message.svg" /></a>
+          <a href="mailto:ben.r.watson@gmail.com" target="_blank"><img src="icons/message.svg" /></a>
       </div>
     </header>
     <style>
