--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       body {
         background-image: url("images/spaceforthoughts.jpg");
         background-repeat: no-repeat;
-        background-attachment: fixed; 
-        background-size: 100% 100%;
+        background-attachment: top right; 
+        background-size: cover;
         background-color: #c95a42;
       }
     </style>
