--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/general.css">
   </head>
   <body>
+    <div class="hero"></div>
     <header class="header">
       <div class="instagram">
         <img class="instagram-logo">
@@ -28,9 +29,12 @@
       body {
         background-image: url("images/spaceforthoughts.jpg");
         background-repeat: no-repeat;
-        background-attachment: top right; 
+        background-position: top right;
         background-size: cover;
         background-color: #c95a42;
+      }
+      .hero {
+        background-image: none;
       }
     </style>
   </body>
