--- a/index.html
+++ b/index.html
@@ -1,29 +1,48 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>Space for Thoughts</title>
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/general.css">
-  </head>
-  <body>
-    <div class="hero"></div>
-    <header class="header">
-      <div class="instagram">
-        <img class="instagram-logo">
-          <a href="https://www.instagram.com/benwatson/" target="_blank"><img src="icons/instagram.svg" /></a>
-      </div>
-      <div class="linkedin">
-        <img class="linkedin-logo">
-          <a href="https://www.linkedin.com/in/benrwatson/" target="_blank"><img src="icons/linkedin.svg" /></a>
-      </div>
-      <div class="twitter">
-        <img class="twitter-logo">
-          <a href="https://www.twitter.com/benjaminwatson/" target="_blank"><img src="icons/twitter.svg" /></a>
-      </div>
-      <div class="message">
-        <img class="message-logo">
-          <a href="mailto:ben.r.watson@gmail.com" target="_blank"><img src="icons/message.svg" /></a>
-      </div>
-    </header>
-  </body>
+	<head>
+		<title>Aerial by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Ben Watson</h1>
+						<p>Fire Lieutenant &nbsp;&bull;&nbsp; Creative &nbsp;&bull;&nbsp; Clear Thinker</p>
+						<nav>
+							<ul>
+								<li><a href="mailto:ben.r.watson@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/benrwatson" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+								<li><a href="https://www.instagram.com/benwatson" target="_blank" class="icon brands fa-instagram"><span class="label">instagram</span></a></li>
+								<li><a href="https://dribbble.com/watsonben" target="_blank" class="icon brands fa-dribbble"><span class="label">dribbble</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Ben Watson. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
