--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Aerial by HTML5 UP</title>
+		<title>Ben Watson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,9 +29,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Ben Watson. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+						<span class="copyright">&copy; Ben Watson.</span>
 					</footer>
-
 			</div>
 		</div>
 		<script>
