--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Created by <a href="https://benwatson.info" target="_blank">Ben Watson.</a> </span>
+						<span class="copyright">&copy; Created by <a href="https://benwatson.info" target="_blank">Ben.</a> </span>
 					</footer>
 
 			</div>
